main.css
/* ... */
/* #endregion */

/* #region Feats */

.feat-container
{
    margin-top: 0.5em;
    padding: 0.5em;

    background-color: var(--background-secondary);
    border: 2px outset var(--border-mid);
    border-radius: 6px;

    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-areas:
        "name rank"
        "body body"
        "data count";
    gap: 0 1.5em;
}

.feat-name-container,
.feat-rank-container
{
    font-family: var(--font-header);
    font-weight: 600;
    font-variation-settings: "wdth" 75;
    font-variant: small-caps;

    --feat-name-rank-margin: 0.2em;
}

.feat-name-container
{
    grid-area: name;
    margin-left: var(--feat-name-rank-margin);

    & input
    {
        width: 100%;
        font-size: 1.5em;

        &::placeholder
        {
            color: var(--text-secondary);
            opacity: 0.6;
        }
    }
}

.feat-rank-container
{
    grid-area: rank;
    font-size: 1.4em;

    margin-right: var(--feat-name-rank-margin);
    margin-left: auto;
    height: 100%;

    display: flex;
    align-items: end;
    gap: 0.3em;

    text-transform: uppercase;
    font-variant: none;
}
.feat-rank-container label
{
    line-height: 1.2;
}
.feat-rank-container input
{
    height: 1.2em;
    margin-top: auto;
}

.feat-body,
.feat-body-display
{
    grid-area: body;

    margin-top: 0.8em;
    --feat-body-padding: 0.4em 0.6em;
    padding: var(--feat-body-padding);

    overflow-wrap: break-word;
    border: 1px solid var(--border-primary);
    border-radius: 4px 4px 0 0;
}
.feat-body
{
    background-color: var(--background-primary);

    &:focus
    {
        /*
            No-op filter to suppress a warning that the z-index won't work due to no stacking context.
            
            It does, in fact, work for what it's supposed to (making the focus outline not be weirdly
            overlapped) WITHOUT this line, but it can't hurt to include anyway.
        */
        filter: blur(0);
        z-index: 1;
    }
}
.feat-body-display
{
    cursor: text;
    background-color: var(--background-secondary);
}

:is(.feat-buttons_data, .feat-buttons_count) button
{
    border: 1px solid var(--border-primary);
    border-radius: 0 0 4px 4px;
    border-width: 0 1px 1px 1px;

    color: var(--text-secondary);
    background-color: var(--background-secondary);

    transition: filter 0.06s ease-out;

    /*
        necessary for the below z index to work even though it works just fine on body, which
        is ALSO unpositioned, contrary to what the docs and error message here imply

        maybe contenteditable creates a stacking context or whatever the fuck??? who knows
    */
    position: relative;

    &:first-child
    {
        border-right-width: 0;
    }

    &:focus
    {
        filter: brightness(120%) contrast(95%);
        z-index: 1;
    }
    &:hover
    {
        filter: brightness(120%) contrast(95%);
    }
    &:active
    {
        background-color: var(--background-primary);
        filter: contrast(105%);
    }

    &:disabled
    {
        color: var(--border-light);
        background-color: var(--background-secondary);
        border-color: var(--border-light);

        &:not(:active)
        {
            filter: none;
        }
    }
}

.feat-buttons_data
{
    grid-area: data;
}
.feat-buttons_data button
{
    width: 12ch;
    height: 100%;
    font-weight: 600;
}

.feat-buttons_count
{
    grid-area: count;
    text-align: right;

    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 1.2em;
}
.feat-buttons_count button
{
    width: 2rem;
}

/* #endregion */

/* #endregion */

